--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "devDependencies": {
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.9",
+    "@types/lodash": "^4.14.168",
     "@types/mongoose": "^5.10.1",
     "@types/node": "^14.14.8",
+    "@types/yargs": "^15.0.10",
     "nodemon": "^2.0.6",
     "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
@@ -25,7 +27,10 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "lodash": "^4.17.21",
     "mongoose": "^5.10.15",
-    "validate.js": "^0.13.1"
+    "slugify": "^1.4.6",
+    "validate.js": "^0.13.1",
+    "yargs": "^16.1.1"
   }
 }
