--- a/package.json
+++ b/package.json
@@ -5,32 +5,48 @@
   "main": "index.js",
   "scripts": {
     "tsc": "tsc",
-    "start": "nodemon -w src/*.ts --exec ts-node ./src/server.ts",
-    "build": "tsc",
+    "start": "nodemon --exec ts-node ./src/server.ts -e ts,graphql",
+    "build": "tsc -p . && ncp src/schema server/schema",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/compression": "^1.7.0",
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.9",
+    "@types/graphql": "^14.5.0",
+    "@types/graphql-depth-limit": "^1.1.2",
     "@types/lodash": "^4.14.168",
     "@types/mongoose": "^5.10.1",
-    "@types/node": "^14.14.8",
+    "@types/node": "^14.14.31",
     "@types/yargs": "^15.0.10",
+    "graphql-depth-limit": "^1.1.0",
+    "graphql-import": "^1.0.2",
+    "graphql-import-node": "0.0.4",
     "nodemon": "^2.0.6",
     "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
     "typescript": "^4.0.5"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^8.5.0",
+    "apollo-server": "^2.21.0",
+    "apollo-server-express": "^2.21.0",
     "bcrypt": "^5.0.1",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.5.0",
+    "graphql-type-json": "^0.3.2",
+    "http": "0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^5.10.15",
+    "ncp": "^2.0.0",
     "slugify": "^1.4.6",
     "validate.js": "^0.13.1",
     "yargs": "^16.1.1"
